@@ -10,6 +10,7 @@ lcs-web (2.4.7.1~3) UNRELEASED; urgency=low
   * Replace deprecated PHP 5.3 functions
   * Don't allow reauthentication if already authenticate in auth.php
   * Rename function search_people_trash to search_people_trash_lcs 
+  * Fix make replica config in mkSlapdConf.sh for Etch or Lenny...
 
   [ Raphaël Hertzog ]
   * Remove /tmp/{applilcs,moduleslcs}.xml before calling wget otherwise wget
@@ -17,7 +18,7 @@ lcs-web (2.4.7.1~3) UNRELEASED; urgency=low
     content. This is required because when a broken XML file is downloaded,
     it's not removed...
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Sun, 21 Nov 2010 13:36:02 +0100
+ -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Sat, 04 Dec 2010 11:56:21 +0100
 
 lcs-web (2.4.7) Lcs; urgency=low
 
